# voxel

./: .gitignore  3d-viewer.py  LICENSE  README.md  app.py  basic.frag  basic.vert  core.py  diffuse.frag  diffuse.vert  pyproject.toml  requirements-test.txt  requirements.txt  runtests  setup.cfg  test_core.py  voxel.py
examples/: basic.frag  box.py  sphere.py
tests/: test_app.py  test_core.py
voxel/: app.py  core.py  data.txt  voxel.py
